# torchmocks

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: conv.py  fx_trace.py  lightning_train.py  mock.py  pooling.py
torchmocks/: __init__.py  torchmocks.py
torchmocks/nn/: activation.py  conv.py  dropout.py  embedding.py  linear.py  normalization.py  pooling.py
