[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "torchmocks"
version = "0.0.4"
description = "Mocks pytorch modules so that test run faster"
readme = "README.md"
requires-python = ">=3.7"

keywords = [
    'deep learning',
    'neural networks',
    'machine learning',
    'scientific computations',
    'torchmocks',
]
license = { text = 'MIT' }
classifiers = [
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dependencies = ["torch"]
authors = [{ name = 'Nathan Breitsch' }]

[project.urls]
Homepage = 'https://github.com/nathanbreitsch/torchmocks'

[tool.setuptools]
packages = ['torchmocks']

[tool.hatch.build.targets.sdist]
exclude = [
    "/.pytest_cache",
    "__pycache__",
]
